--- a/giulius/pom.xml
+++ b/giulius/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>giulius-parent</artifactId>
         <groupId>com.mastfrog</groupId>
-        <version>1.3.5</version>
+        <version>1.3.6-SNAPSHOT</version>
     </parent>
     <artifactId>giulius</artifactId>
     <name>Giulius</name>
