--- a/giulius-settings/pom.xml
+++ b/giulius-settings/pom.xml
@@ -6,6 +6,7 @@
         <artifactId>giulius-parent</artifactId>
         <groupId>com.mastfrog</groupId>
         <version>1.3.6-SNAPSHOT</version>
+        <relativePath/>
     </parent>
     <artifactId>giulius-settings</artifactId>
     <name>Giulius Settings</name>
