--- a/maven-merge-configuration/pom.xml
+++ b/maven-merge-configuration/pom.xml
@@ -6,6 +6,7 @@
         <groupId>com.mastfrog</groupId>
         <artifactId>giulius-parent</artifactId>
         <version>1.3.6-SNAPSHOT</version>
+        <relativePath/>
     </parent>
     <artifactId>maven-merge-configuration</artifactId>
     <name>maven-merge-configuration</name>
