--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
         <groupId>com.mastfrog</groupId>
         <artifactId>mastfrog-parent</artifactId>
         <version>1.3.6-SNAPSHOT</version>
+        <relativePath/>
     </parent>
     <name>Giulius Parent</name>
     <description>Guice + Configuration tools</description>
