--- a/giulius/pom.xml
+++ b/giulius/pom.xml
@@ -3,9 +3,9 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>giulius-parent</artifactId>
+        <artifactId>mastfrog-parent</artifactId>
         <groupId>com.mastfrog</groupId>
-        <version>1.3.6-SNAPSHOT</version>
+        <version>1.3.7-SNAPSHOT</version>
         <relativePath/>
     </parent>
     <artifactId>giulius</artifactId>
