--- a/giulius/pom.xml
+++ b/giulius/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>mastfrog-parent</artifactId>
         <groupId>com.mastfrog</groupId>
-        <version>1.3.8</version>
+        <version>1.3.9-SNAPSHOT</version>
         <relativePath/>
     </parent>
     <artifactId>giulius</artifactId>
