Add cluster info module

--- a/pom.xml
+++ b/pom.xml
@@ -16,5 +16,6 @@
         <module>giulius</module>
         <module>giulius-settings</module>
         <module>maven-merge-configuration</module>
+        <module>cluster</module>
     </modules>
 </project>
