--- a/cluster/pom.xml
+++ b/cluster/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>mastfrog-parent</artifactId>
         <groupId>com.mastfrog</groupId>
-        <version>1.3.9-SNAPSHOT</version>
+        <version>1.3.9</version>
         <relativePath/>
     </parent>
     <artifactId>cluster</artifactId>
