--- a/giulius-settings/pom.xml
+++ b/giulius-settings/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>mastfrog-parent</artifactId>
         <groupId>com.mastfrog</groupId>
-        <version>1.4.0-SNAPSHOT</version>
+        <version>1.4.0</version>
         <relativePath/>
     </parent>
     <artifactId>giulius-settings</artifactId>
