--- a/maven-merge-configuration/src/testprojects/c/pom.xml
+++ b/maven-merge-configuration/src/testprojects/c/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>guicy-parent</artifactId>
         <groupId>com.mastfrog</groupId>
-        <version>1.4.0-SNAPSHOT</version>
+        <version>1.4.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>testproject-c</artifactId>
