Guice+BoneCP bindings - a thing I've written too many times

--- a/pom.xml
+++ b/pom.xml
@@ -18,5 +18,6 @@
         <module>maven-merge-configuration</module>
         <module>cluster</module>
         <module>signalreload</module>
+        <module>giulius-jdbc</module>
     </modules>
 </project>
