--- a/maven-merge-configuration/src/testprojects/b/pom.xml
+++ b/maven-merge-configuration/src/testprojects/b/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>guicy-parent</artifactId>
         <groupId>com.mastfrog</groupId>
-        <version>1.5.4</version>
+        <version>1.6.0-dev</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>testproject-b</artifactId>
