--- a/giulius-jdbc/pom.xml
+++ b/giulius-jdbc/pom.xml
@@ -16,10 +16,10 @@
             <type>jar</type>
         </dependency>
         <dependency>
-            <groupId>com.jolbox</groupId>
-            <artifactId>bonecp</artifactId>
-            <version>0.8.0.RELEASE</version>
-        </dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <scope>compile</scope>
+        </dependency>        
         <dependency>
             <groupId>com.mastfrog</groupId>
             <artifactId>giulius-settings</artifactId>
