--- a/giulius-jdbc/pom.xml
+++ b/giulius-jdbc/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.mastfrog</groupId>
         <artifactId>giulius-parent</artifactId>
-        <version>1.6.0-dev</version>
+        <version>1.6.0</version>
     </parent>
     <name>Giulius JDBC</name>
     <artifactId>giulius-jdbc</artifactId>
