--- a/maven-merge-configuration/src/testprojects/c/pom.xml
+++ b/maven-merge-configuration/src/testprojects/c/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>guicy-parent</artifactId>
         <groupId>com.mastfrog</groupId>
-        <version>1.6.0</version>
+        <version>1.6.1-dev</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>testproject-c</artifactId>
