Split out acteur-specific mongodb from general guice mongodb bindings

--- a/pom.xml
+++ b/pom.xml
@@ -18,5 +18,6 @@
         <module>cluster</module>
         <module>signalreload</module>
         <module>giulius-jdbc</module>
+        <module>giulius-mongodb</module>
     </modules>
 </project>
