--- a/giulius-mongodb/pom.xml
+++ b/giulius-mongodb/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.mastfrog</groupId>
         <artifactId>giulius-parent</artifactId>
-        <version>1.6.1.2-netty-5</version>
+        <version>1.6.1.2-dev</version>
     </parent>
     <artifactId>giulius-mongodb</artifactId>
     <packaging>jar</packaging>
