Bind CollectionPromises in giulius mongodb

--- a/giulius-mongodb-async/pom.xml
+++ b/giulius-mongodb-async/pom.xml
@@ -23,6 +23,11 @@
             <scope>test</scope>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>com.mastfrog</groupId>
+            <artifactId>mongo-promises</artifactId>
+            <type>jar</type>
+        </dependency>        
     </dependencies>
     <build>
         <plugins>
