Use project.groupId where possible

--- a/giulius-jdbc/pom.xml
+++ b/giulius-jdbc/pom.xml
@@ -19,11 +19,11 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>com.mastfrog</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>giulius-settings</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.mastfrog</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>giulius</artifactId>
         </dependency>
     </dependencies>
