--- a/signalreload/pom.xml
+++ b/signalreload/pom.xml
@@ -10,7 +10,7 @@
     <artifactId>signalreload</artifactId>
     <dependencies>
         <dependency>
-            <groupId>com.mastfrog</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>giulius</artifactId>
         </dependency>
     </dependencies>
