--- a/cluster/pom.xml
+++ b/cluster/pom.xml
@@ -15,7 +15,7 @@
             <artifactId>guice</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.mastfrog</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>util</artifactId>
         </dependency>
     </dependencies>
