--- a/giulius-mongodb/pom.xml
+++ b/giulius-mongodb/pom.xml
@@ -13,7 +13,7 @@
             <artifactId>mongo-java-driver</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.mastfrog</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>giulius</artifactId>
         </dependency>
     </dependencies>
