--- a/giulius-mongojack/pom.xml
+++ b/giulius-mongojack/pom.xml
@@ -18,7 +18,7 @@
             <artifactId>guice</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.mastfrog</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>giulius-mongodb</artifactId>
         </dependency>
     </dependencies>
