--- a/giulius-mongodb/pom.xml
+++ b/giulius-mongodb/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.mastfrog</groupId>
         <artifactId>giulius-parent</artifactId>
-        <version>1.7.0</version>
+        <version>2.0.0-dev</version>
     </parent>
     <artifactId>giulius-mongodb</artifactId>
     <dependencies>
