Factor thread pool binding stuff out of acteur; ensure shutdown hook registry runs hooks in reverse order they were added in

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>giulius-mongodb</module>
         <module>giulius-mongojack</module>
         <module>giulius-mongodb-async</module>
+        <module>giulius-threadpool</module>
     </modules>
     <url>https://github.com/timboudreau/giulius</url>
     <scm>
