--- a/giulius-mongodb-async/pom.xml
+++ b/giulius-mongodb-async/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.mastfrog</groupId>
         <artifactId>giulius-parent</artifactId>
-        <version>2.0.1-dev</version>
+        <version>2.0.1</version>
     </parent>
     <artifactId>giulius-mongodb-async</artifactId>
     <dependencies>
