Eliminate a lot of output from tests; misc cleanup; use newer versions of several libraries; release 2.0.1

--- a/giulius-threadpool/pom.xml
+++ b/giulius-threadpool/pom.xml
@@ -10,7 +10,7 @@
     <artifactId>giulius-threadpool</artifactId>
     <dependencies>
         <dependency>
-            <groupId>com.mastfrog</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>giulius</artifactId>
         </dependency>
     </dependencies>
