Default mongodb output to /dev/null, since newer versions of Maven get cranky about it being piped to the process's stdout;  can turn it back on with acteur.debug or route to a file

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@
 target/
 
 /cluster-ids/nbproject/private/
-/nb-configuration.xml
+nb-configuration.xml
 
 /giulius/nbproject/
 /giulius-settings/nbproject/
