--- a/giulius-mongodb-async/pom.xml
+++ b/giulius-mongodb-async/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.mastfrog</groupId>
         <artifactId>giulius-parent</artifactId>
-        <version>2.0.3</version>
+        <version>2.0.4</version>
     </parent>
     <artifactId>giulius-mongodb-async</artifactId>
     <dependencies>
@@ -50,6 +50,9 @@
                     <perCoreThreadCount>1</perCoreThreadCount>
                     <threadCount>1</threadCount>
                     <reuseForks>false</reuseForks>
+                    <systemPropertyVariables>
+                        <acteur.debug>true</acteur.debug>
+                    </systemPropertyVariables>
                 </configuration>
             </plugin>
         </plugins>
