A module for formally initializing mongodb collections and indexes

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ nb-configuration.xml
 /giulius/nbproject/
 /giulius-settings/nbproject/
 /giulius-threadpool/nbproject/
+/giulius-mongodb-async-init/nbproject/
