--- a/giulius-mongodb-async-init/pom.xml
+++ b/giulius-mongodb-async-init/pom.xml
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.mastfrog</groupId>
         <artifactId>mastfrog-parent</artifactId>
-        <version>2.2.0</version>
+        <version>2.2.1</version>
         <relativePath/>
     </parent>
     <artifactId>giulius-mongodb-async-init</artifactId>
@@ -51,8 +51,7 @@
     </dependencies>
     <build>
                 <!-- to enable console logging in real time -->
-                <!--
-        <plugins>
+<!--        <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -73,7 +72,6 @@
                     </systemPropertyVariables>
                 </configuration>
             </plugin>            
-        </plugins>
-                -->
+        </plugins>-->
     </build>
 </project>
