--- a/giulius-mongodb-async/pom.xml
+++ b/giulius-mongodb-async/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.mastfrog</groupId>
         <artifactId>giulius-parent</artifactId>
-        <version>2.4.1</version>
+        <version>2.5.0-dev</version>
     </parent>
     <artifactId>giulius-mongodb-async</artifactId>
     <dependencies>
@@ -24,6 +24,11 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>mongo-promises</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>injection-reflection-indexer</artifactId>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
     <build>
