--- a/giulius-threadpool/pom.xml
+++ b/giulius-threadpool/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.mastfrog</groupId>
         <artifactId>mastfrog-parent</artifactId>
-        <version>2.4.1</version>
+        <version>2.5.0-dev</version>
         <relativePath/>
     </parent>
     <artifactId>giulius-threadpool</artifactId>
@@ -12,6 +12,11 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>giulius</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>injection-reflection-indexer</artifactId>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
