--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.mastfrog</groupId>
         <artifactId>mastfrog-parent</artifactId>
-        <version>2.4.1</version>
+        <version>2.5.0-dev</version>
         <relativePath/>
     </parent>
     <name>Giulius Parent</name>
@@ -23,6 +23,7 @@
         <module>giulius-mongodb-async</module>
         <module>giulius-threadpool</module>
         <module>giulius-mongodb-async-init</module>
+        <module>injection-reflection-indexer</module>
     </modules>
     <url>https://github.com/timboudreau/giulius</url>
     <scm>
