--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,8 @@
         <module>giulius-threadpool</module>
         <module>giulius-mongodb-async-init</module>
         <module>injection-reflection-indexer</module>
+        <module>giulius-annotations</module>
+        <module>giulius-annotation-processors</module>
     </modules>
     <url>https://github.com/timboudreau/giulius</url>
     <scm>
