--- a/pom.xml
+++ b/pom.xml
@@ -23,9 +23,9 @@
         <module>giulius-mongodb-async</module>
         <module>giulius-threadpool</module>
         <module>giulius-mongodb-async-init</module>
-        <module>injection-reflection-indexer</module>
         <module>giulius-annotations</module>
-        <module>giulius-annotation-processors</module>
+<!--        <module>injection-reflection-indexer</module>
+        <module>giulius-annotation-processors</module> -->
     </modules>
     <url>https://github.com/timboudreau/giulius</url>
     <scm>
