--- a/giulius-settings/pom.xml
+++ b/giulius-settings/pom.xml
@@ -12,7 +12,20 @@
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>util</artifactId>
+            <artifactId>util-preconditions</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>util-streams</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>util-strings</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>util-collections</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
     <url>https://github.com/timboudreau/giulius</url>
