--- a/giulius/pom.xml
+++ b/giulius/pom.xml
@@ -16,6 +16,14 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>util-collections</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>util-function</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>giulius-annotations</artifactId>
         </dependency>
         <dependency>
