Remove defunct dependencies on util; split simple json and properties writing into their own project; perf work on Strings.literalReplaceAll

--- a/cluster/pom.xml
+++ b/cluster/pom.xml
@@ -16,7 +16,15 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>util</artifactId>
+            <artifactId>util-preconditions</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>util-streams</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>util-strings</artifactId>
         </dependency>
     </dependencies>
     <url>https://github.com/timboudreau/giulius</url>
