--- a/giulius-annotation-processors/pom.xml
+++ b/giulius-annotation-processors/pom.xml
@@ -12,10 +12,13 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>annotation-processors</artifactId>
-            <scope>compile</scope>
-        </dependency>        
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>util-fileformat</artifactId>
+        </dependency>
     </dependencies>
-   <build>
+    <build>
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -46,5 +49,5 @@
                 </configuration>
             </plugin>
         </plugins>
-    </build>    
+    </build>
 </project>
