Update anno processors

--- a/giulius-annotation-processors/pom.xml
+++ b/giulius-annotation-processors/pom.xml
@@ -17,6 +17,10 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>util-fileformat</artifactId>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>annotation-tools</artifactId>
+        </dependency>        
     </dependencies>
     <build>
         <plugins>
