--- a/injection-reflection-indexer/pom.xml
+++ b/injection-reflection-indexer/pom.xml
@@ -69,8 +69,19 @@
                             </compilerArgs>
                         </configuration>
                     </execution>
-
                 </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.mastfrog</groupId>
+                        <artifactId>util-collections</artifactId>
+                        <version>${mastfrog.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>com.mastfrog</groupId>
+                        <artifactId>util-strings</artifactId>
+                        <version>${mastfrog.version}</version>
+                    </dependency>
+                </dependencies>
             </plugin>
         </plugins>
     </build>
@@ -81,17 +92,19 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>annotation-tools</artifactId>
+        </dependency>        
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>util-fileformat</artifactId>
         </dependency>
         <dependency>
             <groupId>com.mastfrog</groupId>
             <artifactId>util-strings</artifactId>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.mastfrog</groupId>
             <artifactId>util-collections</artifactId>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>javax.inject</groupId>
