Prep for deployment to maven central

--- a/giulius-mongojack/pom.xml
+++ b/giulius-mongojack/pom.xml
@@ -22,7 +22,10 @@
             <artifactId>giulius-mongodb</artifactId>
         </dependency>
     </dependencies>
-    <url>https://github.com/timboudreau/giulius</url>
+    <issueManagement>
+        <system>Github</system>
+        <url>https://github.com/timboudreau/giulius/issues</url>
+    </issueManagement>
     <scm>
         <url>https://github.com/timboudreau/giulius</url>
         <connection>scm:git:https://github.com/timboudreau/giulius.git</connection>
