--- a/injection-reflection-indexer/pom.xml
+++ b/injection-reflection-indexer/pom.xml
@@ -122,7 +122,10 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-    <url>https://github.com/timboudreau/util</url>
+    <issueManagement>
+        <system>Github</system>
+        <url>https://github.com/timboudreau/giulius/issues</url>
+    </issueManagement>
     <scm>
         <url>https://github.com/timboudreau/util</url>
         <connection>scm:git:https://github.com/timboudreau/giulius</connection>
