--- a/giulius-settings/pom.xml
+++ b/giulius-settings/pom.xml
@@ -28,7 +28,10 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-    <url>https://github.com/timboudreau/giulius</url>
+    <issueManagement>
+        <system>Github</system>
+        <url>https://github.com/timboudreau/giulius/issues</url>
+    </issueManagement>
     <scm>
         <url>https://github.com/timboudreau/giulius</url>
         <connection>scm:git:https://github.com/timboudreau/giulius.git</connection>
