--- a/maven-merge-configuration/pom.xml
+++ b/maven-merge-configuration/pom.xml
@@ -140,7 +140,10 @@
             </releases>
         </repository>
     </repositories>
-    <url>https://github.com/timboudreau/giulius</url>
+    <issueManagement>
+        <system>Github</system>
+        <url>https://github.com/timboudreau/giulius/issues</url>
+    </issueManagement>
     <scm>
         <url>https://github.com/timboudreau/giulius</url>
         <connection>scm:git:https://github.com/timboudreau/giulius.git</connection>
