--- a/maven-merge-configuration/src/testprojects/a/pom.xml
+++ b/maven-merge-configuration/src/testprojects/a/pom.xml
@@ -33,7 +33,10 @@
             </plugin>
         </plugins>
     </build>
-    <url>https://github.com/timboudreau/giulius</url>
+    <issueManagement>
+        <system>Github</system>
+        <url>https://github.com/timboudreau/giulius/issues</url>
+    </issueManagement>
     <scm>
         <url>https://github.com/timboudreau/giulius</url>
         <connection>scm:git:https://github.com/timboudreau/giulius.git</connection>
