Finishing prep for push to maven central

--- a/giulius-mongojack/pom.xml
+++ b/giulius-mongojack/pom.xml
@@ -31,6 +31,10 @@
         <connection>scm:git:https://github.com/timboudreau/giulius.git</connection>
         <developerConnection>git@github.com/timboudreau/giulius.git</developerConnection>
     </scm>
+    <organization>
+        <name>Mastfrog Technologies</name>
+        <url>https://mastfrog.com</url>
+    </organization>
     <licenses>
         <license>
             <name>MIT</name>
