--- a/giulius-threadpool/pom.xml
+++ b/giulius-threadpool/pom.xml
@@ -8,6 +8,10 @@
         <relativePath/>
     </parent>
     <artifactId>giulius-threadpool</artifactId>
+    <organization>
+        <name>Mastfrog Technologies</name>
+        <url>https://mastfrog.com</url>
+    </organization>
     <issueManagement>
         <system>Github</system>
         <url>https://github.com/timboudreau/giulius/issues</url>
