--- a/giulius-annotation-processors/pom.xml
+++ b/giulius-annotation-processors/pom.xml
@@ -8,14 +8,27 @@
         <relativePath/>
     </parent>
     <artifactId>giulius-annotation-processors</artifactId>
-    <organization>
-        <name>Mastfrog Technologies</name>
-        <url>https://mastfrog.com</url>
-    </organization>
+    <url>https://github.com/timboudreau/giulius</url>
+    <scm>
+        <url>https://github.com/timboudreau/giulius.git</url>
+        <connection>scm:git:https://github.com/timboudreau/giulius.git</connection>
+        <developerConnection>git@github.com/timboudreau/giulius.git</developerConnection>
+    </scm>
     <issueManagement>
         <system>Github</system>
         <url>https://github.com/timboudreau/giulius/issues</url>
-    </issueManagement><dependencies>
+    </issueManagement>
+    <licenses>
+        <license>
+            <name>MIT</name>
+            <url>https://opensource.org/licenses/MIT</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses><organization>
+        <name>Mastfrog Technologies</name>
+        <url>https://mastfrog.com</url>
+    </organization>
+    <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>annotation-processors</artifactId>
