--- a/giulius-mongodb/pom.xml
+++ b/giulius-mongodb/pom.xml
@@ -7,6 +7,7 @@
         <version>2.5.0-dev</version>
     </parent>
     <artifactId>giulius-mongodb</artifactId>
+    <url>https://github.com/timboudreau/giulius</url>
     <dependencies>
         <dependency>
             <groupId>org.mongodb</groupId>
@@ -22,10 +23,11 @@
         <url>https://github.com/timboudreau/giulius/issues</url>
     </issueManagement>
     <scm>
-        <url>https://github.com/timboudreau/giulius</url>
+        <url>https://github.com/timboudreau/giulius.git</url>
         <connection>scm:git:https://github.com/timboudreau/giulius.git</connection>
         <developerConnection>git@github.com/timboudreau/giulius.git</developerConnection>
     </scm>
+    
     <organization>
         <name>Mastfrog Technologies</name>
         <url>https://mastfrog.com</url>
@@ -33,7 +35,8 @@
     <licenses>
         <license>
             <name>MIT</name>
-            <url>http://opensource.org/licenses/MIT</url>
+            <url>https://opensource.org/licenses/MIT</url>
+            <distribution>repo</distribution>
         </license>
     </licenses>
     <developers>
