--- a/giulius/pom.xml
+++ b/giulius/pom.xml
@@ -8,6 +8,7 @@
         <relativePath/>
     </parent>
     <artifactId>giulius</artifactId>
+    <url>https://github.com/timboudreau/giulius</url>
     <name>Giulius</name>
     <dependencies>
         <dependency>
@@ -41,10 +42,11 @@
         <url>https://github.com/timboudreau/giulius/issues</url>
     </issueManagement>
     <scm>
-        <url>https://github.com/timboudreau/giulius</url>
+        <url>https://github.com/timboudreau/giulius.git</url>
         <connection>scm:git:https://github.com/timboudreau/giulius.git</connection>
         <developerConnection>git@github.com/timboudreau/giulius.git</developerConnection>
     </scm>
+    
     <organization>
         <name>Mastfrog Technologies</name>
         <url>https://mastfrog.com</url>
@@ -52,7 +54,8 @@
     <licenses>
         <license>
             <name>MIT</name>
-            <url>http://opensource.org/licenses/MIT</url>
+            <url>https://opensource.org/licenses/MIT</url>
+            <distribution>repo</distribution>
         </license>
     </licenses>
     <developers>
