--- a/injection-reflection-indexer/pom.xml
+++ b/injection-reflection-indexer/pom.xml
@@ -8,6 +8,7 @@
         <relativePath/>
     </parent>
     <artifactId>injection-reflection-indexer</artifactId>
+    <url>https://github.com/timboudreau/giulius</url>
     <build>
         <plugins>
             <plugin>
@@ -87,7 +88,7 @@
     </build>
     <dependencies>
         <dependency>
-            <groupId>com.mastfrog</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>annotation-processors</artifactId>
         </dependency>
         <dependency>
@@ -99,11 +100,11 @@
             <artifactId>util-fileformat</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.mastfrog</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>util-strings</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.mastfrog</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>util-collections</artifactId>
         </dependency>
         <dependency>
@@ -127,10 +128,11 @@
         <url>https://github.com/timboudreau/giulius/issues</url>
     </issueManagement>
     <scm>
-        <url>https://github.com/timboudreau/util</url>
-        <connection>scm:git:https://github.com/timboudreau/giulius</connection>
-        <developerConnection>git@github.com/timboudreau/giulius</developerConnection>
+        <url>https://github.com/timboudreau/giulius.git</url>
+        <connection>scm:git:https://github.com/timboudreau/giulius.git</connection>
+        <developerConnection>git@github.com/timboudreau/giulius.git</developerConnection>
     </scm>
+    
     <organization>
         <name>Mastfrog Technologies</name>
         <url>https://mastfrog.com</url>
@@ -138,7 +140,8 @@
     <licenses>
         <license>
             <name>MIT</name>
-            <url>http://opensource.org/licenses/MIT</url>
+            <url>https://opensource.org/licenses/MIT</url>
+            <distribution>repo</distribution>
         </license>
     </licenses>
     <developers>
