--- a/maven-merge-configuration/src/testprojects/a/pom.xml
+++ b/maven-merge-configuration/src/testprojects/a/pom.xml
@@ -7,6 +7,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>testproject-a</artifactId>
+    <url>https://github.com/timboudreau/giulius</url>
     <name>Test Project A</name>
     <dependencies>
         <dependency>
@@ -38,10 +39,11 @@
         <url>https://github.com/timboudreau/giulius/issues</url>
     </issueManagement>
     <scm>
-        <url>https://github.com/timboudreau/giulius</url>
+        <url>https://github.com/timboudreau/giulius.git</url>
         <connection>scm:git:https://github.com/timboudreau/giulius.git</connection>
         <developerConnection>git@github.com/timboudreau/giulius.git</developerConnection>
     </scm>
+    
     <organization>
         <name>Mastfrog Technologies</name>
         <url>https://mastfrog.com</url>
@@ -49,7 +51,8 @@
     <licenses>
         <license>
             <name>MIT</name>
-            <url>http://opensource.org/licenses/MIT</url>
+            <url>https://opensource.org/licenses/MIT</url>
+            <distribution>repo</distribution>
         </license>
     </licenses>
     <developers>
