Clean up index generating annotation processors; remove generic that required line processor to reference the annotation type

--- a/giulius-mongodb-async/pom.xml
+++ b/giulius-mongodb-async/pom.xml
@@ -39,6 +39,7 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>injection-reflection-indexer</artifactId>
             <scope>compile</scope>
+            <version>${mastfrog.version}</version>
         </dependency>
     </dependencies>
     <build>
