Remove global junit dependency in order to start using JUnit 5; add JUnit 4 dependency to projects that now need it

--- a/giulius-mongodb-async-init/pom.xml
+++ b/giulius-mongodb-async-init/pom.xml
@@ -72,6 +72,11 @@
             <artifactId>giulius-tests</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
         <!-- to enable console logging in real time -->
