--- a/giulius-threadpool/pom.xml
+++ b/giulius-threadpool/pom.xml
@@ -38,5 +38,10 @@
             <artifactId>injection-reflection-indexer</artifactId>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
