--- a/injection-reflection-indexer/pom.xml
+++ b/injection-reflection-indexer/pom.xml
@@ -122,6 +122,11 @@
             <artifactId>jackson-databind</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <issueManagement>
         <system>Github</system>
