--- a/giulius/pom.xml
+++ b/giulius/pom.xml
@@ -36,6 +36,11 @@
             <artifactId>guice-multibindings</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <issueManagement>
         <system>Github</system>
