Add default binding of javax.time.Duration to giulius; a postgres async driver guice binding module, plus a test harness that starts a temporary postgres instance and cleans it up

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ nb-configuration.xml
 /giulius-mongodb-async-init/nbproject/
 /giulius/injection-reflection-indexer/nbproject/
 /injection-reflection-indexer/nbproject/
+/giulius-postgres-async/nbproject/
