--- a/giulius/pom.xml
+++ b/giulius/pom.xml
@@ -25,6 +25,10 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>util-time</artifactId>
+        </dependency>        
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>giulius-annotations</artifactId>
         </dependency>
         <dependency>
