Add support for merging plexus components - needed by tiny-maven-indexer ane generally a good thing

--- a/maven-merge-configuration/pom.xml
+++ b/maven-merge-configuration/pom.xml
@@ -8,6 +8,7 @@
         <version>2.7.1</version>
         <relativePath/>
     </parent>
+    <version>2.7.1.1</version>
     <artifactId>maven-merge-configuration</artifactId>
     <url>https://github.com/timboudreau/giulius</url>
     <name>maven-merge-configuration</name>
